deploy/eshop-ui/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: eshop-ui
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: eshop-ui
    weight: 100
  wildcardPolicy: None
